# apps/web-tracker/src/constants/transaction-type.ts
@@ -1,7 +1,0 @@
-export const TransactionType = {
-  INCOME: 'INCOME',
-  EXPENSE: 'EXPENSE',
-} as const;
-
-export type TransactionType =
-  (typeof TransactionType)[keyof typeof TransactionType];
